# rust-rocksdb

./: .gitignore  Cargo.toml  README.md  build_rocksdb.sh  flake.nix  proc-macros-build-nix.md  rocksdb.md
librocksdb-sys/: Cargo.toml  build.rs
src/: db.rs  snapshot.rs  statistics.rs
src/transactions/: transaction.rs
test-cc-rs/: Cargo.toml  args.txt  build.rs  flake.nix
test-cc-rs/docs/: integration_nix_rocksdb.md
test-cc-rs/snappy_test_files/: .#snappy-stubs-public.h  snappy-stubs-public.h
test-cc-rs/src/: main.rs  test.cpp
